[gd_scene load_steps=2 format=2]

[ext_resource path="res://Scenes/EndMenu.gd" type="Script" id=1]

[node name="EndMenu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="Panel" type="Panel" parent="."]
modulate = Color( 0.298039, 0.298039, 0.298039, 0.815686 )
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -512.0
margin_top = -300.0
margin_right = -512.0
margin_bottom = -300.0

[node name="CenterContainer" type="CenterContainer" parent="."]
margin_right = 40.0
margin_bottom = 40.0
use_top_left = true

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer"]
margin_left = -90.0
margin_top = -64.0
margin_right = 90.0
margin_bottom = 64.0

[node name="RestartButton" type="Button" parent="CenterContainer/VBoxContainer"]
margin_right = 180.0
margin_bottom = 40.0
rect_min_size = Vector2( 180, 40 )
text = "Restart"

[node name="BackButton" type="Button" parent="CenterContainer/VBoxContainer"]
margin_top = 44.0
margin_right = 180.0
margin_bottom = 84.0
rect_min_size = Vector2( 180, 40 )
text = "Back to Menu"

[node name="QuitButton" type="Button" parent="CenterContainer/VBoxContainer"]
margin_top = 88.0
margin_right = 180.0
margin_bottom = 128.0
rect_min_size = Vector2( 180, 40 )
text = "Quit Game"

[connection signal="pressed" from="CenterContainer/VBoxContainer/RestartButton" to="." method="_on_RestartButton_pressed"]
[connection signal="pressed" from="CenterContainer/VBoxContainer/BackButton" to="." method="_on_BackButton_pressed"]
[connection signal="pressed" from="CenterContainer/VBoxContainer/QuitButton" to="." method="_on_QuitButton_pressed"]
